manifests/timerboard-beta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: timerboard-beta
  name: timerboard-beta
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: timerboard-beta
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: timerboard-beta
    spec:
      containers:
      - image: andimiller/timerboard-net-frontend-tyrian:0.4
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: timerboard-net-backend
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
