manifests/timerboard-beta-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: timerboard-beta
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: timerboard-beta
  sessionAffinity: None
  type: ClusterIP
